--- a/base/src/main/resources/application.properties
+++ b/base/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=h2
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:./database/database;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.username=${BASE_DATASOURCE_USERNAME}
+spring.datasource.password=${BASE_DATASOURCE_PASSWORD}
 spring.data.jpa.repositories.enabled=true
 spring.jpa.open-in-view=false
 spring.rabbitmq.host=${RABBITMQ_HOST}
