--- a/character-generator-starter/src/main/resources/application.properties
+++ b/character-generator-starter/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.virtual-host=${RABBITMQ_USERNAME}
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+
