--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,10 @@
             <artifactId>spring-rabbit</artifactId>
             <version>3.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>annotationProcessor</scope>
+        </dependency>
     </dependencies>
 </project>
