--- a/security-starter/pom.xml
+++ b/security-starter/pom.xml
@@ -17,9 +17,14 @@
 
     <dependencies>
         <dependency>
+            <artifactId>base</artifactId>
+            <groupId>de.hipp.pnp</groupId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>de.hipp.pnp</groupId>
             <artifactId>security</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
