--- a/character-generator-starter/pom.xml
+++ b/character-generator-starter/pom.xml
@@ -16,6 +16,11 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <dependency>
             <groupId>de.hipp.pnp</groupId>
             <artifactId>base</artifactId>
