--- a/renovate.json
+++ b/renovate.json
@@ -1,32 +1,49 @@
 {
   "extends": [
-           "config:base",
-           "github>whitesource/merge-confidence:beta"
-         ],
+    "config:base",
+    "github>whitesource/merge-confidence:beta"
+  ],
   "dependencyDashboard": true,
-  "schedule": ["after 8am and before 5pm every weekday"],
-  "automergeSchedule": ["after 8am and before 3pm every weekday"],
+  "schedule": [
+    "after 8am and before 5pm every weekday"
+  ],
+  "automergeSchedule": [
+    "after 8am and before 3pm every weekday"
+  ],
   "timezone": "Europe/Berlin",
   "stabilityDays": 3,
   "vulnerabilityAlerts": {
-           "addLabels": ["security"],
-           "commitMessageSuffix": "[SECURITY]"
-   },      
-  "labels": ["📌 dependencies"],
+    "addLabels": [
+      "security"
+    ],
+    "commitMessageSuffix": "[SECURITY]"
+  },
+  "labels": [
+    "📌 dependencies"
+  ],
   "commitMessagePrefix": "⬆️",
   "commitMessageAction": "Upgrade",
   "packageRules": [
     {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "pin",
+        "digest"
+      ],
       "automerge": true
     },
     {
-      "matchUpdateTypes": ["pin"],
+      "matchUpdateTypes": [
+        "pin"
+      ],
       "commitMessagePrefix": "📌",
       "commitMessageAction": "Pin"
     },
     {
-      "matchUpdateTypes": ["rollback"],
+      "matchUpdateTypes": [
+        "rollback"
+      ],
       "commitMessagePrefix": "⏪",
       "commitMessageAction": "Rollback"
     }
